--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vendor/imgui"]
 	path = vendor/imgui
 	url = https://github.com/ocornut/imgui
+[submodule "vendor/SPIRV-Reflect"]
+	path = vendor/SPIRV-Reflect
+	url = https://github.com/KhronosGroup/SPIRV-Reflect
