--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 	path = vendor/tracy
 	url = https://github.com/wolfpld/tracy.git
 	branch = master
+[submodule "vendor/assimp"]
+	path = vendor/assimp
+	url = https://github.com/assimp/assimp
