--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "vendor/meshoptimizer"]
 	path = vendor/meshoptimizer
 	url = https://github.com/zeux/meshoptimizer
+[submodule "vendor/enkiTS"]
+	path = vendor/enkiTS
+	url = https://github.com/dougbinks/enkiTS
