Added xxHash as a submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "vendor/FidelityFX-FSR2"]
 	path = vendor/FidelityFX-FSR2
 	url = https://github.com/GPUOpen-Effects/FidelityFX-FSR2.git
+[submodule "vendor/xxHash"]
+	path = vendor/xxHash
+	url = https://github.com/Cyan4973/xxHash.git
