--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "vendor/xxHash"]
 	path = vendor/xxHash
 	url = https://github.com/Cyan4973/xxHash.git
+[submodule "vendor/DirectX-Headers"]
+	path = vendor/DirectX-Headers
+	url = git@github.com:microsoft/DirectX-Headers.git
