--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "vendor/Splash"]
 	path = vendor/Splash
 	url = git@github.com:I-Hudson/Splash.git
+[submodule "vendor/D3D12MemoryAllocator"]
+	path = vendor/D3D12MemoryAllocator
+	url = https://github.com/GPUOpen-LibrariesAndSDKs/D3D12MemoryAllocator.git
