Add serialsier type to file. Convert now on IResource (This needs more work).

--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "vendor/lz4"]
 	path = vendor/lz4
 	url = https://github.com/lz4/lz4.git
+[submodule "vendor/qoi"]
+	path = vendor/qoi
+	url = https://github.com/phoboslab/qoi
