Added Reflect project.
Added example use case with editor windows. The reflect tools scans all editor files looking for class which inherit from IEditorWindow. When found generated code registers the windows.

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "vendor/qoi"]
 	path = vendor/qoi
 	url = https://github.com/phoboslab/qoi
+[submodule "vendor/Reflect"]
+	path = vendor/Reflect
+	url = https://github.com/I-Hudson/Reflect.git
