Added file watching submodule. Editor watches content folder.

--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "vendor/zip"]
 	path = vendor/zip
 	url = https://github.com/kuba--/zip.git
+[submodule "vendor/efsw"]
+	path = vendor/efsw
+	url = https://github.com/SpartanJ/efsw.git
